# planning-poker

./: LICENSE  README.md
backend/: .pre-commit-config.yaml  README.md  pyproject.toml
backend/src/: main.py
frontend/: README.md  eslint.config.js  package.json
frontend/.husky/: pre-commit
frontend/src/: App.css  App.tsx
frontend/src/components/: index.ts
frontend/src/components/Button/: index.tsx  styles.ts
frontend/src/components/PokerCard/: index.tsx  styles.ts
frontend/src/stories/: Button.stories.ts  Card.stories.ts  PokerCard.stories.ts
